Today Weight Ver 0.1
当前版本不建议使用 Today Weight，因为它功能还未完善，并且也没有经过足够的测试，使用过程中可能会出现一些无法预料的情况。

--- a/BCD/Base.lproj/Main.storyboard
+++ b/BCD/Base.lproj/Main.storyboard
@@ -626,7 +626,7 @@
                         <sections>
                             <tableViewSection id="S8v-5y-c5p">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="Hro-Iv-QCX" customClass="MKTableViewCell" customModule="BilibiliCD" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="Hro-Iv-QCX" customClass="MKTableViewCell" customModule="MaterialKit">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hro-Iv-QCX" id="Zpp-25-tPW">
@@ -654,7 +654,7 @@
                                             <segue destination="uMu-2d-WQe" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="pFk-eZ-ib2"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="9Iv-ea-W26" customClass="MKTableViewCell" customModule="BilibiliCD" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="9Iv-ea-W26" customClass="MKTableViewCell" customModule="MaterialKit">
                                         <rect key="frame" x="0.0" y="90" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9Iv-ea-W26" id="fpD-S8-CQc">
@@ -682,7 +682,7 @@
                                             <segue destination="Enq-T1-832" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="QYP-Sc-lmq"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="Gom-jE-D2T" customClass="MKTableViewCell" customModule="BilibiliCD" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="Gom-jE-D2T" customClass="MKTableViewCell" customModule="MaterialKit">
                                         <rect key="frame" x="0.0" y="180" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gom-jE-D2T" id="eLa-IK-kSb">
@@ -710,7 +710,7 @@
                                             <segue destination="NFI-Ou-sCf" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="xkI-Je-9lR"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="uHg-dJ-JSI" customClass="MKTableViewCell" customModule="BilibiliCD" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="uHg-dJ-JSI" customClass="MKTableViewCell" customModule="MaterialKit">
                                         <rect key="frame" x="0.0" y="270" width="320" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uHg-dJ-JSI" id="deU-j9-5Ba">
@@ -1143,7 +1143,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="历史记录数量上限" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wcg-QB-ee6" customClass="MKTextField" customModule="BilibiliCD" customModuleProvider="target">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="历史记录数量上限" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wcg-QB-ee6" customClass="MKTextField" customModule="MaterialKit">
                                 <rect key="frame" x="16" y="44" width="288" height="60"/>
                                 <color key="tintColor" red="0.40090259909999998" green="0.80100601910000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -1160,7 +1160,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VaP-rH-8UN" customClass="MKButton" customModule="BilibiliCD" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VaP-rH-8UN" customClass="MKButton" customModule="MaterialKit">
                                 <rect key="frame" x="16" y="112" width="90" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="nY3-Zg-ydl"/>
@@ -1177,7 +1177,7 @@
                                     <action selector="cancelButtonTapped" destination="r8L-6q-K1a" eventType="touchUpInside" id="RSF-LH-Kbs"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1GK-6P-ci7" customClass="MKButton" customModule="BilibiliCD" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1GK-6P-ci7" customClass="MKButton" customModule="MaterialKit">
                                 <rect key="frame" x="224" y="112" width="80" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="Ab2-Wn-y1i"/>
@@ -1230,7 +1230,7 @@
         <image name="liuliet-pro" width="346" height="360"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="dIf-Ib-BVL"/>
+        <segue reference="pFk-eZ-ib2"/>
         <segue reference="Eeb-QN-AAw"/>
     </inferredMetricsTieBreakers>
 </document>
