--- a/BilibiliCD/Base.lproj/MainInterface.storyboard
+++ b/BilibiliCD/Base.lproj/MainInterface.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="av10086" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="GcN-lo-r42">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="av10086" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="GcN-lo-r42">
                                 <rect key="frame" x="8" y="8" width="144" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="8TL-vO-Z2m"/>
@@ -42,10 +42,18 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zo-1D-HYM">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <connections>
                                     <action selector="downloadImage" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="bZx-YU-vIe"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="少女祈祷中……" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9r-cb-CWM">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" red="0.39582031249999999" green="0.39582031249999999" blue="0.39582031249999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
                             <constraint firstItem="5zo-1D-HYM" firstAttribute="bottom" secondItem="ssy-KU-ocm" secondAttribute="bottom" id="3YY-h6-pO2"/>
@@ -56,12 +64,16 @@
                             <constraint firstItem="GcN-lo-r42" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" constant="8" id="T3Y-xJ-Fpb"/>
                             <constraint firstItem="5zo-1D-HYM" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="T5S-gb-sVh"/>
                             <constraint firstItem="FKQ-f7-rf5" firstAttribute="top" secondItem="GcN-lo-r42" secondAttribute="bottom" id="TSs-zg-3rZ"/>
+                            <constraint firstItem="R9r-cb-CWM" firstAttribute="bottom" secondItem="ssy-KU-ocm" secondAttribute="bottom" id="aBd-HK-blF"/>
                             <constraint firstItem="22x-PQ-NoW" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" id="cCo-rZ-BV5"/>
+                            <constraint firstItem="R9r-cb-CWM" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" id="coD-Ye-rVf"/>
                             <constraint firstItem="FKQ-f7-rf5" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="8" id="hmt-WY-dIc"/>
                             <constraint firstItem="GcN-lo-r42" firstAttribute="leading" secondItem="ssy-KU-ocm" secondAttribute="leading" constant="8" id="j0m-Ta-XnL"/>
+                            <constraint firstItem="R9r-cb-CWM" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="jUq-5t-4x6"/>
                             <constraint firstItem="22x-PQ-NoW" firstAttribute="leading" secondItem="FKQ-f7-rf5" secondAttribute="trailing" constant="8" id="maB-DI-5Zd"/>
                             <constraint firstItem="22x-PQ-NoW" firstAttribute="top" secondItem="ssy-KU-ocm" secondAttribute="top" id="tBb-sz-7tY"/>
                             <constraint firstItem="22x-PQ-NoW" firstAttribute="leading" secondItem="GcN-lo-r42" secondAttribute="trailing" constant="8" id="ufC-GE-htC"/>
+                            <constraint firstItem="R9r-cb-CWM" firstAttribute="trailing" secondItem="ssy-KU-ocm" secondAttribute="trailing" id="yzK-UZ-xyV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ssy-KU-ocm"/>
                     </view>
@@ -71,6 +83,7 @@
                     <connections>
                         <outlet property="downloadButton" destination="5zo-1D-HYM" id="ftf-nR-ksP"/>
                         <outlet property="imageView" destination="22x-PQ-NoW" id="7jw-DJ-baK"/>
+                        <outlet property="loadingText" destination="R9r-cb-CWM" id="jUQ-sE-mC9"/>
                         <outlet property="numberLabel" destination="GcN-lo-r42" id="Enb-9O-HFh"/>
                         <outlet property="titleLabel" destination="FKQ-f7-rf5" id="ffq-AN-67F"/>
                     </connections>
