--- a/BCD/Base.lproj/Main.storyboard
+++ b/BCD/Base.lproj/Main.storyboard
@@ -313,7 +313,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XsU-ss-UBH" customClass="MKButton" customModule="BilibiliCD" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XsU-ss-UBH" customClass="MKButton" customModule="MaterialKit">
                                 <rect key="frame" x="0.0" y="508" width="320" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="sdC-d6-FmO"/>
@@ -327,7 +327,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="XsU-ss-UBH" secondAttribute="trailing" constant="-16" id="MYR-jV-DMh"/>
-                            <constraint firstItem="Xq8-e8-eI4" firstAttribute="top" secondItem="XsU-ss-UBH" secondAttribute="bottom" id="PlG-5B-n1z"/>
+                            <constraint firstItem="Xq8-e8-eI4" firstAttribute="top" secondItem="XsU-ss-UBH" secondAttribute="bottom" constant="20" id="PlG-5B-n1z"/>
                             <constraint firstAttribute="leadingMargin" secondItem="XsU-ss-UBH" secondAttribute="leading" constant="16" id="o6G-Za-wRu"/>
                         </constraints>
                     </view>
@@ -759,7 +759,6 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uMu-2d-WQe" customClass="SakuraNavController" customModule="BilibiliCD" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3Cy-pq-ZJn">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -776,7 +775,6 @@
             <objects>
                 <navigationController id="NFI-Ou-sCf" customClass="BrownNavController" customModule="BilibiliCD" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="e0R-6N-1lg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -1070,7 +1068,6 @@
             <objects>
                 <navigationController id="dzb-zd-eId" customClass="GreyNavController" customModule="BilibiliCD" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="I6W-ge-YiO">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -1121,7 +1118,6 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Enq-T1-832" customClass="BlueNavController" customModule="BilibiliCD" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qXM-f5-261">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
