--- a/BCD/Base.lproj/Main.storyboard
+++ b/BCD/Base.lproj/Main.storyboard
@@ -1102,25 +1102,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="    まあ〜说是美工，其实只要会画画就行了。因为以我这个三流编程水平，太高端的界面也做不粗来，现在这个界面已经是我这个理工男的能力极限了。不用你说我也知道它很挫，但我有什么办法，我也很绝望啊( ´_ゝ｀)" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kl0-H4-mxE">
-                                <rect key="frame" x="16" y="84" width="288" height="253"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="253" id="f4R-51-gge"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="    因此我希望能找个会画画的（妹子）帮忙画几幅插画放到这个App里面，让App变得更萌一点。如果你有时间，有能力的话，欢迎加入我们！" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aug-ZI-g2q">
-                                <rect key="frame" x="16" y="345" width="288" height="111.5"/>
+                                <rect key="frame" x="16" y="84" width="288" height="183"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eyK-mB-ju4">
-                                <rect key="frame" x="16" y="465.5" width="288" height="83.5"/>
+                                <rect key="frame" x="16" y="275" width="288" height="83.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoo-UE-2CD">
-                                        <rect key="frame" x="99" y="22.5" width="91" height="38"/>
+                                        <rect key="frame" x="99" y="23" width="91" height="38"/>
                                         <fontDescription key="fontDescription" name="PingFangHK-Regular" family="PingFang HK" pointSize="18"/>
                                         <state key="normal" title="给我发私信">
                                             <color key="titleColor" red="0.62329528805000001" green="0.55563846115023729" blue="0.56725834804633624" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1132,6 +1123,7 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="83.5" id="3fq-d1-6Mj"/>
                                     <constraint firstItem="aoo-UE-2CD" firstAttribute="centerY" secondItem="eyK-mB-ju4" secondAttribute="centerY" id="J6B-F0-QC0"/>
                                     <constraint firstItem="aoo-UE-2CD" firstAttribute="centerX" secondItem="eyK-mB-ju4" secondAttribute="centerX" id="O5f-49-16W"/>
                                 </constraints>
@@ -1139,19 +1131,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Aug-ZI-g2q" firstAttribute="top" secondItem="Kl0-H4-mxE" secondAttribute="bottom" constant="8" id="0UH-sf-obA"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="Aug-ZI-g2q" secondAttribute="leading" id="2rQ-zZ-zw6"/>
                             <constraint firstItem="Kl0-H4-mxE" firstAttribute="leading" secondItem="LHe-iW-CaP" secondAttribute="leadingMargin" id="9yB-5V-M2X"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Aug-ZI-g2q" secondAttribute="trailing" id="HK5-UX-a4w"/>
                             <constraint firstItem="Kl0-H4-mxE" firstAttribute="trailing" secondItem="LHe-iW-CaP" secondAttribute="trailingMargin" id="OnL-bV-Ogl"/>
                             <constraint firstAttribute="leadingMargin" secondItem="eyK-mB-ju4" secondAttribute="leading" id="bLD-Cn-9yN"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eyK-mB-ju4" secondAttribute="trailing" id="bMm-VT-XcZ"/>
-                            <constraint firstItem="eyK-mB-ju4" firstAttribute="top" secondItem="Aug-ZI-g2q" secondAttribute="bottom" constant="8.5" id="d9X-ab-MN6"/>
-                            <constraint firstItem="jWk-wV-ceW" firstAttribute="top" secondItem="eyK-mB-ju4" secondAttribute="bottom" constant="19" id="ojm-Od-lhH"/>
+                            <constraint firstItem="eyK-mB-ju4" firstAttribute="top" secondItem="Kl0-H4-mxE" secondAttribute="bottom" constant="8" id="uqw-wA-sPt"/>
                             <constraint firstItem="Kl0-H4-mxE" firstAttribute="top" secondItem="LHe-iW-CaP" secondAttribute="topMargin" constant="20" id="wEk-Xd-4ZO"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="美工（tan90°）" id="hIj-RW-BT5"/>
+                    <connections>
+                        <outlet property="textView" destination="Kl0-H4-mxE" id="3uu-nZ-iio"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Udq-wt-h8N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
